--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.2.0",
     "react-helmet": "^5.2.0",
     "truncatise": "0.0.7",
+    "url-loader": "0.6.2",
     "uuid": "^3.2.1"
   },
   "keywords": [
